<resources>
    <string name="app_name">Health Watch</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_add_reminder">My Medicine</string>
    <string name="title_activity_edit_reminder">Add Medicine</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="hintTxtItem">Enter an item here ...</string>
    <string name="lblBtnAdd">Add Item</string>
    <string name="txtEmpty">List is empty</string>
    <string name="lblBtnDel">Delete Selected Items</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="no_reminders">Click on the plus button below to begin creating your reminders!</string>

    <string name="no_bullet">Click on the plus button to begin creating your bullets!</string>

    <string name="licenses">LICENSE
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_medicine_schedule">MedicineSchedule</string>

</resources>
